--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - UNITY_VERSION="2018.1"
     - UNITY_VERSION="2018.2"
     - UNITY_VERSION="2018.3"
+    - UNITY_VERSION="2019.1"
 
 branches:
   only:
