--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,8 @@ branches:
   only:
   - master
 
+before_install:
+  - travis_retry gem update --system || travis_retry gem update --system 2.7.10
+  - travis_retry gem install bundler --no-document || travis_retry gem install bundler --no-document -v 1.17.3
 script:
   - bundle exec ruby gen.rb $UNITY_VERSION > json/$UNITY_VERSION.json && ./scripts/pr-if-changed.sh
